--- a/Galeria/styles.css
+++ b/Galeria/styles.css
@@ -5,7 +5,8 @@ body {
 .image{
     border: 5px solid green;
     border-radius: 10px;
-    height: 400px;
+    width: 400px;
+    height: 250px;
 }
 
 .link-button {
