--- a/Galeria/styles.css
+++ b/Galeria/styles.css
@@ -32,12 +32,12 @@ h1 {
   
   h2 {
     font-size: 40px;
-    color: #4b0082;
+    color: #8300e0;
     text-align: left;
     margin-top: 20px;
     font-family: "Helvetica", sans-serif;
     text-transform: uppercase;
-    border-bottom: 4px solid #4b0082;
+    border-bottom: 4px solid #8300e0;
     padding-bottom: 8px;
   }
   
