--- a/Galeria/styles.css
+++ b/Galeria/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(66, 66, 66);
+    background-image: url(board.jpg);
 }
 
 .image{
@@ -14,7 +15,7 @@ body {
 
 .link-button{
     text-decoration: none;
-    color: white;
+    color: black;
     border: 1px solid gray;
     background-color: #f2f2f2;
     padding: 5px;
