--- a/Galeria/styles.css
+++ b/Galeria/styles.css
@@ -45,3 +45,7 @@ h1 {
     border-bottom: 4px solid #8300e0;
     padding-bottom: 8px;
   }
+
+  .sombra{
+    text-shadow: rgba(0, 0, 0, 0.555) 0 -2px;
+  }
